<resources>
    <string name="app_name">Projet_Major_Simon</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="drawer_open">Close me</string>
    <string name="drawer_clode">Open me</string>
    <string name="userlogedin">FILLER</string>
    <string name="cosultation_name">Name:</string>
    <string name="date_consultation">Due date:</string>
    <string name="temps_consultation">Time elapsed:</string>
    <string name="pourcentage_consultation">Percentage:</string>
    <string name="change_consulatation">Change</string>
    <string name="name_creation">Task Name</string>
    <string name="date_creation">Due date</string>
    <string name="select_date_creation">Select Date...</string>
    <string name="ajouter_creation">add task</string>
    <string name="name_inscription">Username</string>
    <string name="mdp_inscription">Password</string>
    <string name="confirmation_inscription">Confirm password</string>
    <string name="inscription_inscription">Registration</string>
    <string name="name_main">Username</string>
    <string name="mdp_main">Password</string>
    <string name="connexion_main">Log in</string>
    <string name="inscription_main">Registration</string>
    <string name="name_accueil">Task name</string>
    <string name="pourcentage_accueil">Percentage</string>
    <string name="temps_accueil">Time elapsed</string>
    <string name="date_accueil">Deadline</string>
    <string name="accueil_menu">Home</string>
    <string name="creation_menu">Create task</string>
    <string name="deconnexion_menu">Logout</string>
    <string name="Accueil_Title">Home</string>
    <string name="Consultation_title">Consultation</string>
    <string name="Creation_title">Create task</string>
    <string name="Inscription_title">Registration</string>
    <string name="connexion_title">Log in</string>
</resources>