<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"

        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:layout_weight="1"

        android:orientation="vertical">

        <TextView
            android:id="@+id/Text_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/name_inscription"

            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/Edit_Text_Username"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/Text_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"


            android:gravity="center"


            android:text="@string/mdp_inscription"


            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/Edit_Text_Password"
            android:textAlignment="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:inputType="textPassword"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/Text_ConfirmationPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"


            android:gravity="center"


            android:text="@string/confirmation_inscription"


            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/Edit_Text_ConfirmationPassword"
            android:textAlignment="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:inputType="textPassword"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"

        android:orientation="horizontal">



        <Button
            android:id="@+id/button_inscription"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/inscription_inscription" />
    </LinearLayout>


</LinearLayout>