<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"

        android:orientation="vertical">


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"

        android:orientation="vertical">

        <TextView
            android:id="@+id/Text_TacheName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/name_creation"

            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/Edit_Text_tachename"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" />




            <TextView
                android:id="@+id/Text_dateecheance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"


                android:gravity="center"


                android:text="@string/date_creation"


                android:textAlignment="center"
                android:textSize="25sp" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="#d4d4d4"
            android:hint="@string/select_date_creation"
            android:padding="15dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"

        android:orientation="horizontal">


        <Button
            android:id="@+id/button_ajouter"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/ajouter_creation"
            android:layout_marginRight="10px"
            />


    </LinearLayout>


</LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/activity_header_main"
        app:menu="@menu/activity_main_drawer"
        />

</androidx.drawerlayout.widget.DrawerLayout>